package espeon.game;

import espeon.game.jade.SpellModel;
import espeon.game.red.Creature;
import espeon.game.red.Spell;

public class Diamonds {
    
    public static Spell getSpellInstance(int id) {
        return null;
    }

    public static Creature getCreatureInstance(int id) {
        return null;
    }

    public static SpellModel getSpellModel(int modelid) {
        return null;
    }



}
